# 1835-konsek

./: .gitignore  1835-Spielregeln.md  Makefile  README.md  docker-compose.yml  map_data.json
backend/: Dockerfile  __init__.py  alembic.ini  main.py  pyproject.toml  pytest.ini
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_magic_tokens.py
backend/scripts/: gen_board.py  gen_tiles.py
backend/src/eg1835/api/: __init__.py  app.py  schemas.py  websocket.py
backend/src/eg1835/application/: __init__.py  auth_service.py  game_service.py  notifier.py  view.py
backend/src/eg1835/data/: aktiengesellschaften.yml  board.yml  locomotives.yml  player_boards.yml  private_railways.yml  promotions.yml  route_network.yml  shares.yml  tiles.yml  vorpreussische.yml
backend/src/eg1835/domain/: action_base.py  actions.py  fsm.py  game_end.py  game_state.py  loader.py  models.py  or_flow.py  or_revenue.py  result.py  revenue.py  routing.py  serialization.py  share_price.py  start_packet.py  tile_system.py
backend/src/eg1835/domain/companies/: __init__.py
backend/src/eg1835/infrastructure/: __init__.py  db.py  models.py  repository.py
backend/tests/: test_main.py  test_phase1.py  test_phase10_multiplayer.py  test_phase10_or_integration.py  test_phase10_service.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8_api.py  test_phase8_game_end.py  test_phase8_serialization.py  test_phase8_service.py  test_phase9_api.py  test_phase9_view.py  test_tile_system.py
(+36 files in other folders)
